; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_twl4030-audio.c_twl4030_audio_get_resource.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_twl4030-audio.c_twl4030_audio_get_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twl4030_audio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@twl4030_audio_dev = common dso_local global i32 0, align 4
@TWL4030_MODULE_AUDIO_VOICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @twl4030_audio_get_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @twl4030_audio_get_resource(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.twl4030_audio*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @twl4030_audio_dev, align 4
  %6 = call %struct.twl4030_audio* @platform_get_drvdata(i32 %5)
  store %struct.twl4030_audio* %6, %struct.twl4030_audio** %3, align 8
  %7 = load i32, i32* @TWL4030_MODULE_AUDIO_VOICE, align 4
  %8 = load %struct.twl4030_audio*, %struct.twl4030_audio** %3, align 8
  %9 = getelementptr inbounds %struct.twl4030_audio, %struct.twl4030_audio* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %2, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @twl_i2c_read_u8(i32 %7, i32* %4, i32 %15)
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local %struct.twl4030_audio* @platform_get_drvdata(i32) #1

declare dso_local i32 @twl_i2c_read_u8(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
